src/main/metadata/objects/Dealer_List_Member__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Member</label>
        <referenceTo>Campaign_Member__c</referenceTo>
        <relationshipLabel>Dealer List Members</relationshipLabel>
        <relationshipName>Dealer_List_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to refer the related campaign execution record</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Dealer List Members</relationshipLabel>
        <relationshipName>Dealer_List_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>Campaign_Member__r.Company_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <formula>HYPERLINK(Campaign_Member__r.Contact_Id__c,Campaign_Member__r.Contact_Id__r.LastName&amp;' '&amp; Campaign_Member__r.Contact_Id__r.FirstName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <formula>Campaign_Member__r.Contract_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Responsible_Person__c</fullName>
        <formula>Campaign_Member__r.Contract_Responsible_Person__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Responsible Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <formula>HYPERLINK(Campaign_Member__r.Contract__r.Id,Campaign_Member__r.Contract__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Company_Name__c</fullName>
        <formula>Campaign_Member__r.Contractor_Company_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contractor Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor_Individual_Name__c</fullName>
        <formula>Campaign_Member__r.Contractor_Individual_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contractor Individual Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Complete_Address__c</fullName>
        <formula>Campaign_Member__r.Customer_Complete_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Complete Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Address__c</fullName>
        <formula>Campaign_Member__r.Finance_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <formula>Campaign_Member__r.FirstName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <formula>Campaign_Member__r.LastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Maintenance_CM_Status__c</fullName>
        <label>List Maintenance CM Status</label>
        <picklist>
            <picklistValues>
                <fullName>Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, 'AU') ,'AU', 
IF(ISPICKVAL($User.Market__c, 'CN'), 'CN', 
IF(ISPICKVAL($User.Market__c, 'JP'), 'JP',IF(ISPICKVAL($User.Market__c, 'KR'), 'KR','NA'))))</defaultValue>
        <description>For JP users set to JP</description>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>Campaign_Member__r.Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dealer List Members</relationshipLabel>
        <relationshipName>Dealer_List_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participating_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to refer the related participating dealer record</description>
        <label>Participating Dealer</label>
        <referenceTo>Participating_Dealer__c</referenceTo>
        <relationshipLabel>Dealer List Members</relationshipLabel>
        <relationshipName>Dealer_List_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_the_removal__c</fullName>
        <label>Reason for the removal</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to indicate if dealer removes the campaign member</description>
        <label>Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Representative__c</fullName>
        <formula>Campaign_Member__r.Sales_Representative__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Representative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Representative__c</fullName>
        <formula>Campaign_Member__r.Service_Representative__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Representative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleRelationship__c</fullName>
        <formula>HYPERLINK(Campaign_Member__r.Vehicle_Relationship__r.Id,Campaign_Member__r.Vehicle_Relationship__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VehicleRelationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <formula>HYPERLINK(Campaign_Member__r.Vehicle__r.Id,Campaign_Member__r.Vehicle__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vehicle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code_Finance__c</fullName>
        <formula>Campaign_Member__r.Zip_Code_Finance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code Finance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Campaign_Member__r.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Dealer List Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DLM-{00000000}</displayFormat>
        <label>Dealer List Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer List Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>List_Maintenance_Lock_on_Dealer</fullName>
        <active>true</active>
        <errorConditionFormula>AND(($Profile.Name != 'IntegrationAPI'),( MD__c = 'JP'), Campaign__r.Consolidated_List_Completed__c = TRUE)</errorConditionFormula>
        <errorMessage>List Maintenance is Completed,You Cant Edit And Create</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>lock_on_campaign</fullName>
        <active>true</active>
        <errorConditionFormula>AND(($Profile.Name != 'IntegrationAPI'),( MD__c = 'JP'),Participating_Dealer__r.Approve_the_List__c = TRUE)</errorConditionFormula>
        <errorMessage>Campaign is Locked</errorMessage>
    </validationRules>
	 <validationRules>
        <fullName>Account_cannot_be_changed</fullName>
        <active>true</active>
		<description>Account cannot be changed if List Maintenance CM Status is 'Ready' or 'Removed' , 
As per JIRA SFDCJP-3118</description>
        <errorConditionFormula>AND(($Profile.Name != 'IntegrationAPI'),( MD__c = 'JP'), 
ISCHANGED(NewAccount__c),(OR((ISPICKVAL(List_Maintenance_CM_Status__c, "Ready")),(ISPICKVAL(List_Maintenance_CM_Status__c, "Removed")))) 
)</errorConditionFormula>
        <errorMessage>Account cannot be changed if List Maintenance CM Status is 'Ready' or 'Removed'</errorMessage>
		<errorDisplayField>NewAccount__c</errorDisplayField>
    </validationRules>	
	 <validationRules>
        <fullName>List_Maintenance_CM_Status_Changes</fullName>
        <active>true</active>
		<description>List Maintenance CM Status should be 'New' for new record, As per JIRA SFDCJP-3118</description>
        <errorConditionFormula>AND(($Profile.Name != 'IntegrationAPI'),( MD__c = 'JP'),(OR((ISPICKVAL(List_Maintenance_CM_Status__c, "Ready")),(ISPICKVAL(List_Maintenance_CM_Status__c, "Removed")))),ISNEW(), 
(OR( 
($Profile.Name = 'Japan Dealer Company Manager'), 
($Profile.Name = 'Japan Dealer Sales Manager'), 
($Profile.Name = 'Japan Dealer Sales Representative'), 
($Profile.Name = 'Japan Dealer Service Advisor'), 
($Profile.Name = 'Japan Dealer Service Manager'))) 
)</errorConditionFormula>
        <errorMessage>List Maintenance CM Status should be 'New' for new record</errorMessage>
		<errorDisplayField>List_Maintenance_CM_Status__c</errorDisplayField>
    </validationRules>	
	<validationRules>
        <fullName>LM_CM_Status_cannot_be_changes_to_New</fullName>
        <active>true</active>
		<description>List Maintenance CM Status cannot be changed to 'New', 
As per JIRA SFDCJP-3118</description>
        <errorConditionFormula>AND(($Profile.Name != 'IntegrationAPI'),( MD__c = 'JP'),ISCHANGED(List_Maintenance_CM_Status__c),NOT(ISPICKVAL(PRIORVALUE(List_Maintenance_CM_Status__c),'New')),(ISPICKVAL(List_Maintenance_CM_Status__c, "New")),NOT(ISNEW()), 
(OR( 
($Profile.Name = 'Japan Dealer Company Manager'), 
($Profile.Name = 'Japan Dealer Sales Manager'), 
($Profile.Name = 'Japan Dealer Sales Representative'), 
($Profile.Name = 'Japan Dealer Service Advisor'), 
($Profile.Name = 'Japan Dealer Service Manager'))) 
)</errorConditionFormula>
        <errorMessage>List Maintenance CM Status cannot be changed to 'New'</errorMessage>
		<errorDisplayField>List_Maintenance_CM_Status__c</errorDisplayField>
    </validationRules>	
    <validationRules>
        <fullName>Participating_Dealer_cannot_be_changed</fullName>
        <active>true</active>
		<description> Participating Dealer cannot be changed, As per JIRA SFDCJP-3118</description>
        <errorConditionFormula>AND(($Profile.Name != 'IntegrationAPI'),( MD__c = 'JP'), 
NOT(ISBLANK(PRIORVALUE(Participating_Dealer__c))),NOT(ISNEW()),ISCHANGED(Participating_Dealer__c))</errorConditionFormula>
        <errorMessage>Participating Dealer cannot be changed</errorMessage>
		<errorDisplayField>Participating_Dealer__c</errorDisplayField>
    </validationRules>
	
</CustomObject>